--- a/www/modules/custom/src/template/css/style.css
+++ b/www/modules/custom/src/template/css/style.css
@@ -35,5 +35,18 @@ html, body, #wrapper-table {
     left:0;
     width:100%;
     height: 100%;
-    display:none;
+    opacity:0;
+    -webkit-transition: opacity 1.5s ease-in;
+    -moz-transition: opacity 1.5s ease-in;
+    -o-transition: opacity 1.5s ease-in;
+}
+
+#iframe-wrapper.fade-out
+{
+    opacity:0 !important;
+}
+
+#iframe-wrapper.fade-in
+{
+    opacity:1 !important;
 }
